fix footer height on small screens

--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -51,3 +51,9 @@ footer p {
 .footer-info-wrapper { 
     margin:auto 10px;
 }  
+
+@media screen and (max-width:290px) {
+    footer { 
+        height: 270px;
+    }
+}
